2001-11-03  Tor Lillqvist  <tml@iki.fi>

	* modules/input/Makefile.am: Use -no-undefined on Windows. Look
	for .dll or .so as appropriate as module suffix.

	* gtk-zip.sh.in: Use correct import library names.

	* gtk/gtk.def: Add a couple of missing entry points. (#63585)

	* gtk/gtkimmodule.c (correct_libdir_prefix): New function, used on
	Windows to turn build-time paths from a gtk.immodules distributed
	as part of a binary package into runtime ones in the
	end-user-chosen installation directory.
	(gtk_im_module_init): Use it for module path and domain
	directory.

2001-11-02  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtkrc.c (gtk_rc_make_default_dir): Fix typo: extraneous
	comma.  Include gtkprivate.h for GTK_LIBDIR etc definitions on
	Windows.

2001-10-30  Tor Lillqvist  <tml@iki.fi>

	* Makefile (install-data-hook): Use cp, not $(LN_S) on the .pc
	files. Configure on Win32 (running on Cygwin) thinks symlinks
	exist, but pkg-config is not necesarily a Cygwin program, and
	doesn't understand them.

Fri Nov  2 16:45:17 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkrbtree.c (_gtk_rbtree_remove_node): Clean up height code
	a bit.  I don't think it's completely correct yet, but it's
	getting there.

Fri Nov  2 16:14:15 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkviewport.c (gtk_viewport_size_request): Remove
	random + 5 for width and height. If people want padding,
	they should add padding. (Note the +5 isn't padding
	that will always appear - it just appears in the case
	where the widget is allocated it's requisition.)
	(#51018, Janet Davis)

Fri Nov  2 15:53:23 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimcontext.h (struct _GtkIMContextClass): Pad
	the structure for future expansion.

Fri Nov  2 15:30:34 2001  Owen Taylor  <otaylor@redhat.com>

	Patch from HideToshi Tajima (#51922)
	
	* gtk/gtkimmulticontext.c: Proxy set_use_preedit().

	* gtk/modules/input/gtkimcontextxim.[ch]: Implement
	set_use_preedit().
	